--- a/Cviko_1/Cviko_1.vcxproj
+++ b/Cviko_1/Cviko_1.vcxproj
@@ -135,14 +135,18 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="DrawableObjects.cpp" />
+    <ClCompile Include="DrawableObject.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Rotation.cpp" />
+    <ClCompile Include="Scaling.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Transformation.cpp" />
+    <ClCompile Include="TransformationComposite.cpp" />
+    <ClCompile Include="Translation.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -159,11 +163,16 @@
     <ClInclude Include="Models\suzi_smooth.h" />
     <ClInclude Include="Models\tree.h" />
     <ClInclude Include="Observer.h" />
+    <ClInclude Include="Rotation.h" />
+    <ClInclude Include="Scaling.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Subject.h" />
     <ClInclude Include="Transformation.h" />
+    <ClInclude Include="TransformationComponent.h" />
+    <ClInclude Include="TransformationComposite.h" />
+    <ClInclude Include="Translation.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
