--- a/Cviko_1/Cviko_1.vcxproj
+++ b/Cviko_1/Cviko_1.vcxproj
@@ -134,6 +134,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="BezierCurve.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="DrawableObject.cpp" />
@@ -158,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="BezierCurve.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="DrawableObject.h" />
@@ -211,6 +213,7 @@
     <Image Include="Textures\posx.jpg" />
     <Image Include="Textures\posy.jpg" />
     <Image Include="Textures\posz.jpg" />
+    <Image Include="Textures\tree.png" />
     <Image Include="Textures\wooden_fence.png" />
     <Image Include="Textures\zombie.png" />
   </ItemGroup>
